<resources>
    <string name="app_name">DoctorKeeper</string>
    <string name="toast_network_error">인터넷에 연결되어 있지 않습니다. Wi-Fi 또는 모바일 데이터가 켜져 있는지 확인한 후 다시 시도하세요.</string>
    <string name="setting_ok">확인</string>
    <string name="setting_cancel">취소</string>
    <string name="ver1">새로운 버전이 업데이트 되었습니다.</string>
    <string name="ver2">업데이트 하시겠습니까?</string>
    <string name="join"><u>회원가입</u></string>
    <string name="agree_txt1">전체동의</string>
    <string name="agree_txt3">내용보기</string>


    <string name="join1"><u>이용약관</u></string>
    <string name="join2"><u>개인정보이용방침</u></string>
    <string name="home_txt_custom">고객관리</string>
    <string name="home_txt_consult">상담자료</string>
    <string name="home_txt_setting">설정</string>
    <string name="txt_login">로그인</string>
    <string name="setting">환경설정</string>
    <string name="set_txt01">고객의 치아 상태를 바로 확인할 수 있는 IT 인프라 구축</string>
    <string name="set_txt02">갤럭시탭과 사진기의 연동 시스템 구축</string>
    <string name="set_txt04">Wireless Dentalgraphy with Galaxy Tab</string>
    <string name="set_text_05">Customer Relation Management</string>
    <string name="set_txt_06">고객 정보의 전산화</string>
    <string name="set_txt_07">필요시 환자 정보를 즉시 추출 가능 하도록 시스템 구축</string>
</resources>