<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:layout_width="@dimen/btn_20dp"
                android:layout_height="@dimen/btn_20dp"
                android:background="@drawable/refresh">

            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:text="상담자료 목록"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebebeb">

        </View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_common"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#ebebeb">

    </View>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#ffffff"         android:paddingTop="@dimen/icon_40dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f6f6f6" android:paddingTop="20dp"
            android:paddingLeft="40dp" android:paddingRight="20dp"

            android:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/view_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_65dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_50dp"
                    android:layout_height="@dimen/icon_50dp"
                    android:background="@drawable/icon"></ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pretendard_bold"
                        android:gravity="center"
                        android:shadowColor="#cccccc"
                        android:shadowDx="5.0"
                        android:shadowDy="5.0"
                        android:shadowRadius="5.0"
                        android:text="DOCTOR\nKEEPER"
                        android:textColor="@color/colorMain"
                        android:textSize="25sp"></TextView>

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_50dp"
                android:fontFamily="@font/pretendard_bold"
                android:gravity="center"
                android:text="@string/set_txt04"
                android:textColor="@color/colorMain"
                android:textSize="22sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:text="@string/set_txt01"
                android:textColor="@color/black"
                android:textSize="22sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:text="@string/set_txt02"
                android:textColor="@color/black"
                android:textSize="22sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_40dp"
                android:fontFamily="@font/pretendard_bold"
                android:gravity="center"
                android:text="@string/set_text_05"
                android:textColor="@color/colorMain"
                android:textSize="22sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:text="@string/set_txt_06"
                android:textColor="@color/black"
                android:textSize="22sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:text="@string/set_txt_07"
                android:textColor="@color/black"
                android:textSize="22sp"></TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="center"
            android:text="자료가 없습니다."
            android:textColor="#888888"
            android:textSize="21sp"
            android:visibility="gone"></TextView>


    </FrameLayout>


</LinearLayout>